# petr4-time-series-forecasting

./: .gitignore  4_Regressao_Trabalho_Pratico.ipynb  README.md  make_env.py  pyproject.toml
models/: arima_close_diff.pkl  arima_full_close.pkl  arima_metadata.json  arima_search_results.csv
notebooks/: 01_data_collection.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  04_modeling.ipynb  05_forecasting.ipynb
src/petr4_time_series_forecasting/: __init__.py
