[project]
name = "petr4-time-series-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Giovanni Persio Gonçalves", email = "giovanni.persio@outlook.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
petr4-time-series-forecasting = "petr4_time_series_forecasting:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
