[project]
name = "petr4-time-series-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Giovanni Persio Gonçalves", email = "giovanni.persio@outlook.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "yfinance>=1.5.1",
]

[project.scripts]
petr4-time-series-forecasting = "petr4_time_series_forecasting:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
